--- a/templates/download.html
+++ b/templates/download.html
@@ -11,7 +11,7 @@
 <div class = 'container mt-4'>
     <div class = 'row'>
         <h2 class = 'text-center mb-4'>Invoice Generater</h2>
-        <form method="post" action = "http://127.0.0.1:5000/download" enctype="multipart/form-data">
+        <form method="post" action = "/download" enctype="multipart/form-data">
           
  
 
