--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <div class = 'container mt-4'>
     <div class = 'row'>
         <h2 class = 'text-center mb-4'>Invoice Generater</h2>
-        <form method="post" action = "/" enctype="multipart/form-data">
+        <form method="POST" action = "/" enctype="multipart/form-data">
           
  
 
