--- a/templates/download.html
+++ b/templates/download.html
@@ -37,7 +37,7 @@
 
                 </tbody>
             </table>
-            <input type="submit" class="btn btn-primary" value="Upload">
+            <input type="submit" class="btn btn-primary" value="Download">
         </form>
     </div>
 </div>
